update password registration process

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -8,3 +8,4 @@ msg.input.teamOne.teamTwo                   = Wybierz nazw\u0119 dla zespo\u0142
 msg.invalidTeamResult                       = Wprowadzony wynik jest nieprawid\u0142owy!
 msg.passwordChange.oldAndNewPasswordAreSame = Nowe has\u0142o nie mo\u017Ce by\u0107 stare!
 msg.passwordChange.passwordMismatch         = Nowe has\u0142o nie pasuje do powtarzanego!
+msg.registration.passwordMismatch=Wprowadzone hasło nie zgadza się z powtórzeniem hasła!
