--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -569,3 +569,5 @@ administration.runtime.configuration.selfRegistrationEnabled.tooltip=Mit der Sel
 msg.registration.error.invalidToken=Der eingegebene Registrierungs-Code ist ungültig!
 back.to.login=Zurück zum Login
 msg.registration.info.success=Die Registrierung war erfolgreich. Sie können sich nun anmelden.
+registration.password=Passwort
+registration.passwordRepeat=Passwortwiederholung
