--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-
+registration.passwordRepeat=Password Repeat
 active.users.title = currently logged in users
 
 administration.backup.executeBackupButton                                = Create backup
@@ -569,3 +569,4 @@ administration.runtime.configuration.selfRegistrationEnabled.tooltip=The self re
 msg.registration.error.invalidToken=The entered registration code is invalid!
 back.to.login=back to login
 msg.registration.info.success=Registration successful. Please login.
+registration.password=Password
