--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,4 +1,4 @@
-
+registration.passwordRepeat=Powtórz hasło
 active.users.title = aktualnie zalogowani u\u017Cytkownicy
 
 administration.backup.executeBackupButton                                = Stw\u00F3rz kopi\u0119 zapasow\u0105
@@ -569,3 +569,4 @@ administration.runtime.configuration.selfRegistrationEnabled.tooltip=Autorejestr
 msg.registration.error.invalidToken=Podany kod rejestracyjny jest nieprawidłowy!
 back.to.login=powrót do logowania
 msg.registration.info.success=Pomyślnie zarejestrowano. Proszę się zalogować.
+registration.password=hasło
