--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -8,3 +8,4 @@ msg.input.teamOne.teamTwo                   = Please select a name for team one 
 msg.invalidTeamResult                       = You entered result is invalid!
 msg.passwordChange.oldAndNewPasswordAreSame = The new password must not be your old one!
 msg.passwordChange.passwordMismatch         = New password does not match repeated one!
+msg.registration.passwordMismatch=Password repeat mismatch!
