layout and naming

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,7 +28,7 @@ administration.msg.info.demoResultsCreated                               = Teste
 administration.msg.info.logLevelChanged                                  = Der Log Level wurde auf "{0}" ge\u00E4ndert!
 administration.msg.info.randomMatchesCreated                             = Zufallsspiele wurden erfolgreich angelegt!
 administration.msg.info.runtimeConfigSaved                               = Konfigurationsparameter wurden gespeichert.
-administration.runtime.configuration                                     = Konfigurationsparameter
+administration.runtime.configuration=Konfigurationseinstellungen
 administration.runtime.configuration.changePasswordOnFirstLogin          = Passwort bei erstem Login \u00E4ndern
 administration.runtime.configuration.changePasswordOnFirstLogin.tooltip  = Diese Einstellung bewirkt, dass neu angelegte Benutzer ihr Passwort nach dem ersten Anmelden \u00E4ndern m\u00FCssen.
 administration.runtime.configuration.createDemoData                      = Testdaten automatisch anlegen
@@ -571,3 +571,4 @@ back.to.login=Zurück zum Login
 msg.registration.info.success=Die Registrierung war erfolgreich. Sie können sich nun anmelden.
 registration.password=Passwort
 registration.passwordRepeat=Passwortwiederholung
+administration.runtime.configuration.misc=Diverse Einstellungen
