--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -570,3 +570,4 @@ msg.registration.error.invalidToken=The entered registration code is invalid!
 back.to.login=back to login
 msg.registration.info.success=Registration successful. Please login.
 registration.password=Password
+administration.runtime.configuration.misc=Misc Settings
