--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -28,7 +28,7 @@ administration.msg.info.demoResultsCreated                               = Testo
 administration.msg.info.logLevelChanged                                  = Poziom logowania zosta\u0142 zmieniony na "{0}"!
 administration.msg.info.randomMatchesCreated                             = Testowe losowe mecze zosta\u0142y stworzone pomy\u015Blnie
 administration.msg.info.runtimeConfigSaved                               = Zapisano konfiguracje.
-administration.runtime.configuration                                     = Runtime Configuration Settings
+administration.runtime.configuration=Ustawienia konfiguracji środowiska wykonawczego
 administration.runtime.configuration.changePasswordOnFirstLogin          = Zmie\u0144 has\u0142o podczas pierwszego logowania
 administration.runtime.configuration.changePasswordOnFirstLogin.tooltip  = U\u017Cytkownicy musz\u0105 zmieni\u0107 swoje has\u0142o podczas pierwszego logowania.
 administration.runtime.configuration.createDemoData                      = Wygeneruj przyk\u0142adowe dane podczas startu
@@ -570,3 +570,4 @@ msg.registration.error.invalidToken=Podany kod rejestracyjny jest nieprawidłowy
 back.to.login=powrót do logowania
 msg.registration.info.success=Pomyślnie zarejestrowano. Proszę się zalogować.
 registration.password=hasło
+administration.runtime.configuration.misc=Różne ustawienia
