added group I and J

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -351,6 +351,7 @@ group.entry.GROUP_F          = Gruppe F
 group.entry.GROUP_G          = Gruppe G
 group.entry.GROUP_H          = Gruppe H
 group.entry.GROUP_I          = Gruppe I
+group.entry.GROUP_J          = Gruppe J
 group.entry.QUARTER_FINAL    = Viertelfinale
 group.entry.ROUND_OF_SIXTEEN = Achtelfinale
 group.entry.SEMI_FINAL       = Halbfinale
@@ -572,3 +573,5 @@ msg.registration.info.success=Die Registrierung war erfolgreich. Sie können sic
 registration.password=Passwort
 registration.passwordRepeat=Passwortwiederholung
 administration.runtime.configuration.misc=Diverse Einstellungen
+group.title.I=Gruppe I
+group.title.J=Gruppe J
