--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -571,3 +571,6 @@ back.to.login=back to login
 msg.registration.info.success=Registration successful. Please login.
 registration.password=Password
 administration.runtime.configuration.misc=Misc Settings
+group.title.I=Group I
+group.title.J=Group J
+group.entry.GROUP_J=Group J
