--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -571,3 +571,6 @@ back.to.login=powrót do logowania
 msg.registration.info.success=Pomyślnie zarejestrowano. Proszę się zalogować.
 registration.password=hasło
 administration.runtime.configuration.misc=Różne ustawienia
+group.title.I=Grupa I
+group.title.J=Grupa J
+group.entry.GROUP_J=Grupa J
