added feature for ics calendar file

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -574,3 +574,6 @@ administration.runtime.configuration.misc=Misc Settings
 group.title.I=Group I
 group.title.J=Group J
 group.entry.GROUP_J=Group J
+calendar.ics.title={0} vs. {1}
+calendar.ics.content=Match from group: {0}
+calendar.ics.download.text=Remark match in calendar
