--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -574,3 +574,6 @@ administration.runtime.configuration.misc=Różne ustawienia
 group.title.I=Grupa I
 group.title.J=Grupa J
 group.entry.GROUP_J=Grupa J
+calendar.ics.title={0} vs. {1}
+calendar.ics.content=Runda: {0}
+calendar.ics.download.text=Uwaga dopasowanie w kalendarzu
