--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -575,3 +575,6 @@ registration.passwordRepeat=Passwortwiederholung
 administration.runtime.configuration.misc=Diverse Einstellungen
 group.title.I=Gruppe I
 group.title.J=Gruppe J
+calendar.ics.download.text=Spiel im Kalendar vormerken
+calendar.ics.title={0} gegen {1}
+calendar.ics.content=Spiel aus der Runde: {0}
