export and import user

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -577,3 +577,12 @@ group.entry.GROUP_J=Grupa J
 calendar.ics.title={0} vs. {1}
 calendar.ics.content=Runda: {0}
 calendar.ics.download.text=Uwaga dopasowanie w kalendarzu
+user.importexport.upload.msg.noFileGiven=Wybierz plik JSON do wgrania
+user.importexport.upload.msg.failed=Wystąpił błąd podczas importowania danych użytkownika. Błąd: {0}
+user.importexport.export.name=Eksportuj dane użytkownika
+user.importexport.export.users=Eksportuj dane użytkownika jako JSON
+user.importexport.import.file=Importuj dane użytkownika (plik JSON)
+user.importexport.title=Dane użytkownika Import / eksport
+user.importexport.upload.button=Prześlij plik JSON
+user.importexport.upload.msg.noJsonFile=To nie jest plik JSON.
+user.importexport.upload.msg.saved=Zaimportowano dane użytkownika {0}.
