--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -578,3 +578,12 @@ group.title.J=Gruppe J
 calendar.ics.download.text=Spiel im Kalendar vormerken
 calendar.ics.title={0} gegen {1}
 calendar.ics.content=Spiel aus der Runde: {0}
+user.importexport.title=Benutzerdaten Im-/Export
+user.importexport.export.name=Benutzerdaten exportieren
+user.importexport.export.users=Benutzerdaten als JSON exportieren
+user.importexport.import.file=Benutzerdaten importieren (JSON-Datei)
+user.importexport.upload.button=JSON-Datei hochladen 
+user.importexport.upload.msg.noFileGiven=Bitte wählen Sie eine Datei aus.
+user.importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
+user.importexport.upload.msg.saved=Es wurden {0} Benutzer importiert.
+user.importexport.upload.msg.failed=Es ist ein Fehler beim Import von Benutzerdaten gekommen. Fehler: {0}
