--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -577,3 +577,12 @@ group.entry.GROUP_J=Group J
 calendar.ics.title={0} vs. {1}
 calendar.ics.content=Match from group: {0}
 calendar.ics.download.text=Remark match in calendar
+user.importexport.upload.msg.noFileGiven=Please choose a file to upload!
+user.importexport.upload.msg.failed=An error occured on importing user data. Error: {0}
+user.importexport.export.name=Export user data
+user.importexport.export.users=Export user data as JSON
+user.importexport.import.file=Import user data (JSON file)
+user.importexport.title=User data Import/Export
+user.importexport.upload.button=Upload JSON file
+user.importexport.upload.msg.noJsonFile=This is not a JSON file.
+user.importexport.upload.msg.saved=There has been {0} user data imported.
