bugfix country; bugfix typo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -236,7 +236,7 @@ country.pol           = Polen
 country.prk           = Korea DPR
 country.prt           = Portugal
 country.pur           = Puerto Rico
-country.qat           = Qatar
+country.qat=Katar
 country.rou           = Rum\u00E4nien
 country.rsa           = S\u00FCdafrika
 country.rus           = Russland
@@ -575,7 +575,7 @@ registration.passwordRepeat=Passwortwiederholung
 administration.runtime.configuration.misc=Diverse Einstellungen
 group.title.I=Gruppe I
 group.title.J=Gruppe J
-calendar.ics.download.text=Spiel im Kalendar vormerken
+calendar.ics.download.text=Spiel im Kalender vormerken
 calendar.ics.title={0} gegen {1}
 calendar.ics.content=Spiel aus der Runde: {0}
 user.importexport.title=Benutzerdaten Im-/Export
