--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -586,3 +586,4 @@ user.importexport.title=User data Import/Export
 user.importexport.upload.button=Upload JSON file
 user.importexport.upload.msg.noJsonFile=This is not a JSON file.
 user.importexport.upload.msg.saved=There has been {0} user data imported.
+country.svn=Slovenia
