--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -586,3 +586,4 @@ user.importexport.title=Dane użytkownika Import / eksport
 user.importexport.upload.button=Prześlij plik JSON
 user.importexport.upload.msg.noJsonFile=To nie jest plik JSON.
 user.importexport.upload.msg.saved=Zaimportowano dane użytkownika {0}.
+country.svn=Słowenia
