--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -259,6 +259,7 @@ country.ssd           = S\u00FCdsudan
 country.stp           = S\u00E3o Tom\u00E9 und Pr\u00EDncipe
 country.sur           = Suriname
 country.svk           = Slovakei
+country.svn           = Slovenien
 country.swe           = Schweden
 country.swz           = Swaziland
 country.syr           = Syrien
