--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -587,3 +587,5 @@ user.importexport.upload.button=Prześlij plik JSON
 user.importexport.upload.msg.noJsonFile=To nie jest plik JSON.
 user.importexport.upload.msg.saved=Zaimportowano dane użytkownika {0}.
 country.svn=Słowenia
+administration.runtime.configuration.language=domyślny język
+administration.runtime.configuration.country=kraj domyślny
