creating test users

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -588,3 +588,5 @@ user.importexport.upload.msg.noFileGiven=Bitte wählen Sie eine Datei aus.
 user.importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
 user.importexport.upload.msg.saved=Es wurden {0} Benutzer importiert.
 user.importexport.upload.msg.failed=Es ist ein Fehler beim Import von Benutzerdaten gekommen. Fehler: {0}
+administration.numberOfTestUsers.title=Anzahl Testbenutzer
+administration.msg.info.testUsersCreated=Es wurden {0} Testbenutzer angelegt.
