--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -587,3 +587,5 @@ user.importexport.upload.button=Upload JSON file
 user.importexport.upload.msg.noJsonFile=This is not a JSON file.
 user.importexport.upload.msg.saved=There has been {0} user data imported.
 country.svn=Slovenia
+administration.numberOfTestUsers.title=Number of test users
+administration.msg.info.testUsersCreated=There has been {0} test users created.
