delete all users

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -590,3 +590,5 @@ user.importexport.upload.msg.saved=Es wurden {0} Benutzer importiert.
 user.importexport.upload.msg.failed=Es ist ein Fehler beim Import von Benutzerdaten gekommen. Fehler: {0}
 administration.numberOfTestUsers.title=Anzahl Testbenutzer
 administration.msg.info.testUsersCreated=Es wurden {0} Testbenutzer angelegt.
+administration.deleteAllUsers=Alle Benutzer löschen
+administration.msg.info.deleteAllUsers=Alle Benutzer wurden gelöscht.
