--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -589,3 +589,5 @@ user.importexport.upload.msg.saved=There has been {0} user data imported.
 country.svn=Slovenia
 administration.numberOfTestUsers.title=Number of test users
 administration.msg.info.testUsersCreated=There has been {0} test users created.
+administration.deleteAllUsers=Delete all users
+administration.msg.info.deleteAllUsers=All users has been deleted.
