--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -589,3 +589,5 @@ user.importexport.upload.msg.saved=Zaimportowano dane użytkownika {0}.
 country.svn=Słowenia
 administration.numberOfTestUsers.title=Liczba użytkowników testowych
 administration.msg.info.testUsersCreated=Utworzono {0} użytkowników testowych.
+administration.deleteAllUsers=Usuń wszystkich użytkowników
+administration.msg.info.deleteAllUsers=Wszyscy użytkownicy zostali usunięci.
