added group standings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -592,3 +592,4 @@ administration.numberOfTestUsers.title=Anzahl Testbenutzer
 administration.msg.info.testUsersCreated=Es wurden {0} Testbenutzer angelegt.
 administration.deleteAllUsers=Alle Benutzer löschen
 administration.msg.info.deleteAllUsers=Alle Benutzer wurden gelöscht.
+standings.title=Gruppentabelle
