--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -591,3 +591,4 @@ administration.numberOfTestUsers.title=Number of test users
 administration.msg.info.testUsersCreated=There has been {0} test users created.
 administration.deleteAllUsers=Delete all users
 administration.msg.info.deleteAllUsers=All users has been deleted.
+standings.title=Standings
