--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -591,3 +591,4 @@ administration.numberOfTestUsers.title=Liczba użytkowników testowych
 administration.msg.info.testUsersCreated=Utworzono {0} użytkowników testowych.
 administration.deleteAllUsers=Usuń wszystkich użytkowników
 administration.msg.info.deleteAllUsers=Wszyscy użytkownicy zostali usunięci.
+standings.title=Tabele
