--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -501,7 +501,7 @@ statistics.legend.bonusPoints      = Bonus Points
 statistics.legend.favouriteCountry = Country-Favourite
 statistics.legend.flopBetter       = Flop-Better
 statistics.legend.topBetter        = Top-Better
-statistics.title                   = points statistic
+statistics.title=Points Statistic
 
 systeminfo.title = System Info
 
