--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -2,9 +2,8 @@
 javax.validation.constraints.NotNull.message = must not be empty
 
 msg.bet.betting.error.passwordMismatch      = The new password differs from password repeat!
-msg.input.countries.and.teamNames           = Only country or team names allowed!
+msg.input.countries.and.teamNames=Please choose a country or enter team name!
 msg.input.same.teams                        = A team cannot play against itself!
-msg.input.teamOne.teamTwo                   = Please select a name for team one and team two!
 msg.invalidTeamResult                       = You entered result is invalid!
 msg.passwordChange.oldAndNewPasswordAreSame = The new password must not be your old one!
 msg.passwordChange.passwordMismatch         = New password does not match repeated one!
