--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -2,9 +2,8 @@
 javax.validation.constraints.NotNull.message = nie mo\u017Ce by\u0107 pusty
 
 msg.bet.betting.error.passwordMismatch      = Nowe has\u0142o r\u00F3\u017Cni si\u0119 od powt\u00F3rzenia has\u0142a!
-msg.input.countries.and.teamNames           = Dozwolone s\u0105 tylko nazwy kraj\u00F3w lub dru\u017Cyn!
+msg.input.countries.and.teamNames=Wybierz kraj lub wpisz nazwę drużyny!
 msg.input.same.teams                        = Dru\u017Cyna nie mo\u017Ce gra\u0107 przeciwko sobie!
-msg.input.teamOne.teamTwo                   = Wybierz nazw\u0119 dla zespo\u0142u pierwszego i zespo\u0142u drugiego!
 msg.invalidTeamResult                       = Wprowadzony wynik jest nieprawid\u0142owy!
 msg.passwordChange.oldAndNewPasswordAreSame = Nowe has\u0142o nie mo\u017Ce by\u0107 stare!
 msg.passwordChange.passwordMismatch         = Nowe has\u0142o nie pasuje do powtarzanego!
