added button to create test data for all

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -589,3 +589,5 @@ administration.msg.info.testUsersCreated=Utworzono {0} użytkowników testowych.
 administration.deleteAllUsers=Usuń wszystkich użytkowników
 administration.msg.info.deleteAllUsers=Wszyscy użytkownicy zostali usunięci.
 standings.title=Tabele
+administration.msg.info.createTestDataForAll=Tworzenie wszystkich danych testowych.
+administration.createTestDataForAll=Utwórz dane testowe dla wszystkich.
