--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -590,3 +590,5 @@ administration.msg.info.testUsersCreated=Es wurden {0} Testbenutzer angelegt.
 administration.deleteAllUsers=Alle Benutzer löschen
 administration.msg.info.deleteAllUsers=Alle Benutzer wurden gelöscht.
 standings.title=Gruppentabelle
+administration.msg.info.createTestDataForAll=komplette Testdaten werden angelegt
+administration.createTestDataForAll=komplette Testdaten anlegen
