--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -589,5 +589,5 @@ administration.msg.info.testUsersCreated=There has been {0} test users created.
 administration.deleteAllUsers=Delete all users
 administration.msg.info.deleteAllUsers=All users has been deleted.
 standings.title=Standings
-administration.msg.info.createTestDataForAll=Create Test Data for all
-administration.createTestDataForAll=sdf
+administration.msg.info.createTestDataForAll=All test data will be created.
+administration.createTestDataForAll=Create Test Data for all.
