--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -590,3 +590,4 @@ administration.deleteAllUsers=Delete all users
 administration.msg.info.deleteAllUsers=All users has been deleted.
 standings.title=Standings
 administration.createTestDataForAll=Create Test Data for all.
+administration.msg.info.createTestDataForAll=Creating complete test data
