added files for showing chart

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -592,3 +592,4 @@ administration.msg.info.deleteAllUsers=Alle Benutzer wurden gelöscht.
 standings.title=Gruppentabelle
 administration.msg.info.createTestDataForAll=komplette Testdaten werden angelegt
 administration.createTestDataForAll=komplette Testdaten anlegen
+pointcourse.title=Punkteverlauf
