--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -481,8 +481,7 @@ navigation.systemInfo            = System Info
 navigation.user                  = User
 
 penalty.box.heading = Winner after penalty shot
-
-pointsfrequency.noData            = Currently there are no results!
+pointsfrequency.noData=Winner after penalty shot
 pointsfrequency.points            = Points
 pointsfrequency.table.header.name = Name
 pointsfrequency.title             = Points Frequency
@@ -591,3 +590,4 @@ administration.msg.info.deleteAllUsers=All users has been deleted.
 standings.title=Standings
 administration.createTestDataForAll=Create Test Data for all.
 administration.msg.info.createTestDataForAll=Creating complete test data
+pointcourse.title=Point Course
