update points course

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -590,4 +590,5 @@ administration.msg.info.deleteAllUsers=All users has been deleted.
 standings.title=Standings
 administration.createTestDataForAll=Create Test Data for all.
 administration.msg.info.createTestDataForAll=Creating complete test data
-pointcourse.title=Point Course
+pointcourse.title=Point course
+pointcourse.subtitle=Own point course in comparision to the lowest and highest points course.
