--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -593,3 +593,4 @@ standings.title=Gruppentabelle
 administration.msg.info.createTestDataForAll=komplette Testdaten werden angelegt
 administration.createTestDataForAll=komplette Testdaten anlegen
 pointcourse.title=Punkteverlauf
+pointcourse.subtitle=Eigener Punkteverlauf im Vergleich zum niedrigsten und höchsten Punktestand. 
