--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -591,4 +591,5 @@ administration.msg.info.deleteAllUsers=Wszyscy użytkownicy zostali usunięci.
 standings.title=Tabele
 administration.msg.info.createTestDataForAll=Tworzenie wszystkich danych testowych.
 administration.createTestDataForAll=Utwórz dane testowe dla wszystkich.
-pointcourse.title=dgf
+pointcourse.title=Kurs punktowy
+pointcourse.subtitle=Własny kurs punktowy w porównaniu do kursu najniższego i najwyższego punktu.
