--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -488,7 +488,7 @@ pointsfrequency.noData            = Es liegen noch keine Ergebnisse vor!
 pointsfrequency.points            = Punkte
 pointsfrequency.table.header.name = Name
 pointsfrequency.title             = Punkteh\u00E4ufigkeit
-pointsfrequency.title2            = Anzahl, wie h\u00E4ufig X Punkte getippt wurden
+pointsfrequency.title2            = Anzahl, wie h\u00E4ufig X Punkte getippt wurden.
 
 prices.title = Preise
 
