dice all matches

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -592,3 +592,5 @@ administration.createTestDataForAll=Create Test Data for all.
 administration.msg.info.createTestDataForAll=Creating complete test data
 pointcourse.title=Point course
 pointcourse.subtitle=Own point course in comparision to the lowest and highest points course.
+msg.bet.betting.random.dice.all=All matches has been diced.
+bet.listOpen.dice.all=Dice all matches.
