--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -593,3 +593,5 @@ administration.msg.info.createTestDataForAll=Tworzenie wszystkich danych testowy
 administration.createTestDataForAll=Utwórz dane testowe dla wszystkich.
 pointcourse.title=Kurs punktowy
 pointcourse.subtitle=Własny kurs punktowy w porównaniu do kursu najniższego i najwyższego punktu.
+msg.bet.betting.random.dice.all=Wszystkie mecze zostały pokrojone w kostkę.
+bet.listOpen.dice.all=Kości wszystkie mecze.
