--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -594,3 +594,5 @@ administration.msg.info.createTestDataForAll=komplette Testdaten werden angelegt
 administration.createTestDataForAll=komplette Testdaten anlegen
 pointcourse.title=Punkteverlauf
 pointcourse.subtitle=Eigener Punkteverlauf im Vergleich zum niedrigsten und höchsten Punktestand. 
+msg.bet.betting.random.dice.all=Alle Spiele wurden ausgewürfelt.
+bet.listOpen.dice.all=Alle Spiele würfeln.
