--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -596,3 +596,11 @@ pointcourse.title=Punkteverlauf
 pointcourse.subtitle=Eigener Punkteverlauf im Vergleich zum niedrigsten und höchsten Punktestand. 
 msg.bet.betting.random.dice.all=Alle Spiele wurden ausgewürfelt.
 bet.listOpen.dice.all=Alle Spiele würfeln.
+standings.legend=Legende
+standings.matchesPlayed=Anzahl Spiele
+standings.winner=Gewinner
+standings.draw=unentschieden
+standings.looser=Verlierer
+standings.goals=Torverhältnis
+standings.goalDifference=Tordifferenz
+standings.points=Punkte
