--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -594,3 +594,11 @@ pointcourse.title=Point course
 pointcourse.subtitle=Own point course in comparision to the lowest and highest points course.
 msg.bet.betting.random.dice.all=All matches has been diced.
 bet.listOpen.dice.all=Dice all matches.
+standings.legend=Legend
+standings.matchesPlayed=Matches Played
+standings.winner=Winner
+standings.draw=draw
+standings.looser=Looser
+standings.goals=Goals
+standings.goalDifference=Goal Difference
+standings.points=Points
