--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -595,3 +595,11 @@ pointcourse.title=Kurs punktowy
 pointcourse.subtitle=Własny kurs punktowy w porównaniu do kursu najniższego i najwyższego punktu.
 msg.bet.betting.random.dice.all=Wszystkie mecze zostały pokrojone w kostkę.
 bet.listOpen.dice.all=Kości wszystkie mecze.
+standings.legend=Legenda
+standings.matchesPlayed=Rozegrane mecze
+standings.winner=Zwycięzca
+standings.draw=remis
+standings.looser=Luźniej
+standings.goals=Cele
+standings.goalDifference=Różnica bramek
+standings.points=Zwrotnica
