--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -469,7 +469,7 @@ navigation.betting.extraBets     = Bonus-Tipps
 navigation.betting.open          = noch zu tippen
 navigation.changePassword        = Passwort \u00E4ndern
 navigation.changeUsername        = Benutzername \u00E4ndern
-navigation.configuration         = Konfiguration
+navigation.loggingAndCaching=Logging und Caching
 navigation.dataCreation          = Datenanlage
 navigation.excelexport           = Excel Export
 navigation.excelimport           = Excel Import
@@ -478,7 +478,7 @@ navigation.lastlogin             = Letzte Logins
 navigation.logout                = Abmelden
 navigation.profileImage          = Profilfoto \u00E4ndern
 navigation.ranking=Platzierung
-navigation.runtime.configuration = Laufzeit-Konfiguration
+navigation.runtime.configuration=Konfiguration
 navigation.systemInfo            = Systeminformationen
 navigation.user                  = Benutzer
 
