--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -467,7 +467,7 @@ navigation.betting.extraBets     = bonus bets
 navigation.betting.open          = not betted yet
 navigation.changePassword        = Changed password!
 navigation.changeUsername        = Change username
-navigation.configuration         = Configuration
+navigation.loggingAndCaching=Logging and Caching
 navigation.dataCreation          = Create data
 navigation.excelexport           = Excel Export
 navigation.excelimport           = Excel Import
@@ -476,7 +476,7 @@ navigation.lastlogin             = Last logins
 navigation.logout                = Logout
 navigation.profileImage          = Change profile image
 navigation.ranking               = Ranking
-navigation.runtime.configuration = Runtime Configuration
+navigation.runtime.configuration=Configuration
 navigation.systemInfo            = System Info
 navigation.user                  = User
 
