--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -467,7 +467,7 @@ navigation.betting.extraBets     = Bonusowe typowania
 navigation.betting.open          = Do wytypowania
 navigation.changePassword        = Zmie\u0144 has\u0142o
 navigation.changeUsername        = Zmie\u0144 nazw\u0119 u\u017Cytkownika
-navigation.configuration         = Konfiguracja
+navigation.loggingAndCaching=Rejestrowanie i buforowanie
 navigation.dataCreation          = Stw\u00F3rz dane
 navigation.excelexport           = Excel Export
 navigation.excelimport           = Excel Import
