bugfix creating image group

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -604,3 +604,4 @@ standings.looser=Verlierer
 standings.goals=Torverhältnis
 standings.goalDifference=Tordifferenz
 standings.points=Punkte
+image.group.msg.deletionNotAllowed=Die Gruppe kann nicht gelöscht werden!
