--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -602,3 +602,4 @@ standings.looser=Looser
 standings.goals=Goals
 standings.goalDifference=Goal Difference
 standings.points=Points
+image.group.msg.deletionNotAllowed=This group is not deletable!
