--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -603,3 +603,4 @@ standings.looser=Luźniej
 standings.goals=Cele
 standings.goalDifference=Różnica bramek
 standings.points=Zwrotnica
+image.group.msg.deletionNotAllowed=Tej grupy nie można usunąć!
