--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -200,7 +200,7 @@ country.mas           = Malaysia
 country.mda           = Moldova
 country.mdv           = Maldives
 country.mex           = Mexico
-country.mkd           = FYR Macedonia
+country.mkd=Macedonia
 country.mli           = Mali
 country.mlt           = Malta
 country.mne           = Montenegro
