--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -146,7 +146,7 @@ country.esp           = Spanien
 country.est           = Estland
 country.eth           = \u00C4thiopien
 country.fij           = Fiji
-country.fin           = Finland
+country.fin=Finnland
 country.fra           = Frankreich
 country.fro           = Faroe-Inseln
 country.gab           = Gabun
@@ -200,7 +200,7 @@ country.mas           = Malaysia
 country.mda           = Moldawien
 country.mdv           = Malediven
 country.mex           = Mexiko
-country.mkd           = Mazedonien
+country.mkd=Nord-Mazedonien
 country.mli           = Mali
 country.mlt           = Malta
 country.mne           = Montenegro
