--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -200,7 +200,7 @@ country.mas           = Malezja
 country.mda           = Mo\u0142dawia
 country.mdv           = Malediwy
 country.mex           = Meksyk
-country.mkd=Macedonia
+country.mkd=Macedonia Północna
 country.mli           = Mali
 country.mlt           = Malta
 country.mne           = Czarnog\u00F3ra
