added translation for child property in registration

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -603,3 +603,4 @@ standings.goals=Goals
 standings.goalDifference=Goal Difference
 standings.points=Points
 image.group.msg.deletionNotAllowed=This group is not deletable!
+registration.child=Child
