--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -604,3 +604,4 @@ standings.goals=Cele
 standings.goalDifference=Różnica bramek
 standings.points=Zwrotnica
 image.group.msg.deletionNotAllowed=Tej grupy nie można usunąć!
+registration.child=Dziecko
