--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -605,3 +605,4 @@ standings.goals=Torverhältnis
 standings.goalDifference=Tordifferenz
 standings.points=Punkte
 image.group.msg.deletionNotAllowed=Die Gruppe kann nicht gelöscht werden!
+registration.child=Kind
