--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -593,15 +593,15 @@ administration.msg.info.createTestDataForAll=Tworzenie wszystkich danych testowy
 administration.createTestDataForAll=Utwórz dane testowe dla wszystkich.
 pointcourse.title=Kurs punktowy
 pointcourse.subtitle=Własny kurs punktowy w porównaniu do kursu najniższego i najwyższego punktu.
-msg.bet.betting.random.dice.all=Wszystkie mecze zostały pokrojone w kostkę.
-bet.listOpen.dice.all=Kości wszystkie mecze.
+msg.bet.betting.random.dice.all=Wylosowano wyniki dla wszystkich meczy.
+bet.listOpen.dice.all=Losuj wszystkie mecze.
 standings.legend=Legenda
 standings.matchesPlayed=Rozegrane mecze
-standings.winner=Zwycięzca
-standings.draw=remis
-standings.looser=Luźniej
-standings.goals=Cele
+standings.winner=Zwycięstwa
+standings.draw=Remisy
+standings.looser=Porażki
+standings.goals=Bramki
 standings.goalDifference=Różnica bramek
-standings.points=Zwrotnica
+standings.points=Punkty
 image.group.msg.deletionNotAllowed=Tej grupy nie można usunąć!
 registration.child=Dziecko
