added column in pdf for user child ranking

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -606,3 +606,4 @@ standings.goalDifference=Tordifferenz
 standings.points=Punkte
 image.group.msg.deletionNotAllowed=Die Gruppe kann nicht gelöscht werden!
 registration.child=Kind
+pdf.export.child=Kind
