--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -604,3 +604,4 @@ standings.goalDifference=Goal Difference
 standings.points=Points
 image.group.msg.deletionNotAllowed=This group is not deletable!
 registration.child=Child
+pdf.export.child=child
