--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -605,3 +605,4 @@ standings.goalDifference=Różnica bramek
 standings.points=Punkty
 image.group.msg.deletionNotAllowed=Tej grupy nie można usunąć!
 registration.child=Dziecko
+pdf.export.child=Dziecko
