--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -607,3 +607,12 @@ standings.points=Punkte
 image.group.msg.deletionNotAllowed=Die Gruppe kann nicht gelöscht werden!
 registration.child=Kind
 pdf.export.child=Kind
+importexport.title=Im-/Export
+importexport.export.name=Daten exportieren
+importexport.export.data=Daten als JSON exportieren
+importexport.import.file=Daten importieren (JSON-Datei)
+importexport.upload.button=JSON-Datei hochladen.
+importexport.upload.msg.noFileGiven=Bitte wählen Sie eine Datei aus.
+importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
+importexport.upload.msg.saved=Datenimport abgeschlossen.
+importexport.upload.msg.failed=Es ist ein Fehler beim Import gekommen. Fehler: {0}
