--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -611,7 +611,7 @@ importexport.title=Im-/Export
 importexport.export.name=Daten exportieren
 importexport.export.data=Daten als JSON exportieren
 importexport.import.file=Daten importieren (JSON-Datei)
-importexport.upload.button=JSON-Datei hochladen.
+importexport.upload.button=JSON-Datei hochladen
 importexport.upload.msg.noFileGiven=Bitte wählen Sie eine Datei aus.
 importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
 importexport.upload.msg.saved=Datenimport abgeschlossen.
