--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -605,3 +605,12 @@ standings.points=Points
 image.group.msg.deletionNotAllowed=This group is not deletable!
 registration.child=Child
 pdf.export.child=child
+importexport.title=Im-/Export
+importexport.upload.button=Upload JSON file
+importexport.upload.msg.failed=An error occured while importing the data. error: {0}
+importexport.upload.msg.noFileGiven=Please choose a file.
+importexport.upload.msg.noJsonFile=Your uploaded file is not a JSON file.
+importexport.upload.msg.saved=Data import finished.
+importexport.export.data=Export data as JSON file
+importexport.export.name=Export data
+importexport.import.file=Import data (JSON)
