--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -606,3 +606,12 @@ standings.points=Punkty
 image.group.msg.deletionNotAllowed=Tej grupy nie można usunąć!
 registration.child=Dziecko
 pdf.export.child=Dziecko
+importexport.title=Im-/Export
+importexport.upload.button=Prześlij plik JSON
+importexport.upload.msg.failed=Wystąpił błąd podczas importowania danych. błąd: {0}
+importexport.upload.msg.noFileGiven=Proszę wybrać plik.
+importexport.upload.msg.noJsonFile=Przesłany plik nie jest plikiem JSON.
+importexport.upload.msg.saved=Import danych zakończony.
+importexport.export.data=Eksportuj dane jako plik JSON
+importexport.export.name=Eksportuj dane
+importexport.import.file=Importuj dane (JSON)
