added hint text

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -616,3 +616,4 @@ importexport.upload.msg.noFileGiven=Bitte wählen Sie eine Datei aus.
 importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
 importexport.upload.msg.saved=Datenimport abgeschlossen.
 importexport.upload.msg.failed=Es ist ein Fehler beim Import gekommen. Fehler: {0}
+importexport.subtitle=Es werden alle Benutzer, Spiele und Tipps importiert und exportiert.
