--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -614,3 +614,4 @@ importexport.upload.msg.saved=Data import finished.
 importexport.export.data=Export data as JSON file
 importexport.export.name=Export data
 importexport.import.file=Import data (JSON)
+importexport.subtitle=All users, matches and bets will be imported and exported.
