--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -615,3 +615,4 @@ importexport.upload.msg.saved=Import danych zakończony.
 importexport.export.data=Eksportuj dane jako plik JSON
 importexport.export.name=Eksportuj dane
 importexport.import.file=Importuj dane (JSON)
+importexport.subtitle=Wszyscy użytkownicy, mecze i zakłady zostaną zaimportowane i wyeksportowane.
