--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -560,9 +560,9 @@ registration.link.text=Rejestracja
 registration.token=Kod rejestracyjny
 registration.username=Nazwa Użytkownika
 registration.text=Czy masz kod rejestracyjny? Zarejestruj się tutaj:
-administration.runtime.configuration.registrationCode=Rejestracja w?asna
+administration.runtime.configuration.registrationCode=Rejestracja własna
 administration.runtime.configuration.registrationCode.title=kod rejestracyjny
-administration.runtime.configuration.selfRegistrationEnabled=Aktywuj samodzieln? rejestracj?
+administration.runtime.configuration.selfRegistrationEnabled=Aktywuj samodzielną rejestrację
 administration.runtime.configuration.selfRegistrationEnabled.tooltip=Autorejestracja umo?liwia u?ytkownikom utworzenie w?asnego konta u?ytkownika.
 msg.registration.error.invalidToken=Podany kod rejestracyjny jest nieprawidłowy!
 back.to.login=powrót do logowania
