added language for spanisch and catalan

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -617,3 +617,6 @@ importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine J
 importexport.upload.msg.saved=Datenimport abgeschlossen.
 importexport.upload.msg.failed=Es ist ein Fehler beim Import gekommen. Fehler: {0}
 importexport.subtitle=Es werden alle Benutzer, Spiele und Tipps importiert und exportiert.
+language.es=spanisch
+language.ca=katalanisch
+country.cat=Katalonien
