--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -615,3 +615,6 @@ importexport.export.data=Export data as JSON file
 importexport.export.name=Export data
 importexport.import.file=Import data (JSON)
 importexport.subtitle=All users, matches and bets will be imported and exported.
+language.ca=catalan
+language.es=spanish
+country.cat=Catalan
