--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -618,3 +618,4 @@ importexport.export.data=Exportar datos como archivo JSON
 importexport.export.name=Exportar datos
 importexport.import.file=Importar datos (JSON)
 importexport.subtitle=Todos los usuarios, partidos y apuestas serán importados y exportados.
+country.cat=Cataluña
