--- a/src/main/resources/messages_ca.properties
+++ b/src/main/resources/messages_ca.properties
@@ -617,3 +617,5 @@ importexport.export.data=Exportar dades com a fitxer JSON
 importexport.export.name=Exportar dades
 importexport.import.file=Importar dades (JSON)
 importexport.subtitle=Tots els usuaris, partits i apostes seran importats i exportats.
+language.ca=Català
+country.cat=Catalunya
