--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -616,3 +616,6 @@ importexport.export.data=Eksportuj dane jako plik JSON
 importexport.export.name=Eksportuj dane
 importexport.import.file=Importuj dane (JSON)
 importexport.subtitle=Wszyscy użytkownicy, mecze i zakłady zostaną zaimportowane i wyeksportowane.
+language.es=hiszpański
+language.ca=kataloński
+country.cat=Katalonia
