--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -619,3 +619,5 @@ importexport.import.file=Importar dades (JSON)
 importexport.subtitle=Tots els usuaris, partits i apostes seran importats i exportats.
 language.ca=Català
 country.cat=Catalunya
+administration.runtime.configuration.theme=Tema de disseny
+administration.runtime.configuration.layout=Disseny
