--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -618,3 +618,5 @@ importexport.subtitle=All users, matches and bets will be imported and exported.
 language.ca=catalan
 language.es=spanish
 country.cat=Catalan
+administration.runtime.configuration.theme=Layout Theme
+administration.runtime.configuration.layout=Layout
