--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -619,3 +619,5 @@ importexport.export.name=Exportar datos
 importexport.import.file=Importar datos (JSON)
 importexport.subtitle=Todos los usuarios, partidos y apuestas serán importados y exportados.
 country.cat=Cataluña
+administration.runtime.configuration.theme=Tema de diseño
+administration.runtime.configuration.layout=Diseño
