--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -619,3 +619,5 @@ importexport.subtitle=Wszyscy użytkownicy, mecze i zakłady zostaną zaimportow
 language.es=hiszpański
 language.ca=kataloński
 country.cat=Katalonia
+administration.runtime.configuration.theme=Motyw układu
+administration.runtime.configuration.layout=Układ
