--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -620,3 +620,4 @@ language.es=spanish
 country.cat=Catalan
 administration.runtime.configuration.theme=Layout Theme
 administration.runtime.configuration.layout=Layout
+administration.runtime.configuration.navbarlayout=Navbar Layout
