--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -621,3 +621,4 @@ language.ca=kataloński
 country.cat=Katalonia
 administration.runtime.configuration.theme=Motyw układu
 administration.runtime.configuration.layout=Układ
+administration.runtime.configuration.navbarlayout=Navbar Layout
