--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -621,3 +621,4 @@ language.ca=Català
 country.cat=Catalunya
 administration.runtime.configuration.theme=Tema de disseny
 administration.runtime.configuration.layout=Disseny
+administration.runtime.configuration.navbarlayout=Navbar Layout
