--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -621,3 +621,4 @@ importexport.subtitle=Todos los usuarios, partidos y apuestas serán importados 
 country.cat=Cataluña
 administration.runtime.configuration.theme=Tema de diseño
 administration.runtime.configuration.layout=Diseño
+administration.runtime.configuration.navbarlayout=Navbar Layout
