--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -621,4 +621,4 @@ language.ca=Català
 country.cat=Catalunya
 administration.runtime.configuration.theme=Tema de disseny
 administration.runtime.configuration.layout=Disseny
-administration.runtime.configuration.navbarlayout=Navbar Layout
+administration.runtime.configuration.navbarlayout=Disseny de la barra de navegació
