#34 other admin users can´t update the default user admin

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -622,3 +622,4 @@ country.cat=Catalunya
 administration.runtime.configuration.theme=Tema de disseny
 administration.runtime.configuration.layout=Disseny
 administration.runtime.configuration.navbarlayout=Disseny de la barra de navegació
+user.edited.notAllowed=No teniu permís per editar aquest usuari!
