--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -622,3 +622,4 @@ country.cat=Cataluña
 administration.runtime.configuration.theme=Tema de diseño
 administration.runtime.configuration.layout=Diseño
 administration.runtime.configuration.navbarlayout=Diseño de la barra de navegación
+user.edited.notAllowed=¡No tienes permiso para editar este usuario!
