--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -621,3 +621,4 @@ country.cat=Catalan
 administration.runtime.configuration.theme=Layout Theme
 administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navbar Layout
+user.edited.notAllowed=You are not allowed to edit this user!
